cluster-setup/Protect-node-metadata-and-endpoints/deny-instance-metadata.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-instance-metadata
  namespace: one-of-many
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0 # Preferably allow list something smaller
        except:
        - 169.254.169.254/32
